--- a/templates/base.html
+++ b/templates/base.html
@@ -4,14 +4,14 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title> {% block title %} { endblock }</title>
+        <title> {% block title %} {% endblock %}</title>
         <!-- Bootstrap -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
         <div class="container">
-            {% block content %}
-            {% endblock %}
+            
+            {% block content %}{% endblock %}
             
             <div class="col-md-offset-3 col-md-6">
                 <hr />
