--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -1,4 +1,4 @@
-{% extends base.html %}
+{% extends "base.html" %}
 {% block title %} Registration {% endblock %}
 {% block content %}
     <div class="row">
