--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title> {% block title %} {% endblock %}</title>
+        
         <!-- Bootstrap -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+        
+        {% block header %}{% endblock %}
     </head>
     <body>
         <div class="container">
