updated user profile template

--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -27,6 +27,42 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-9">
+                    <div class="media">
+                        <div class="media-left">
+                            <a href="#">
+                                <img class="media-object" src="//placehold.it/50x50" width="50" heigh="50" alt="{{ user.username }}">
+                            </a>
+                        </div>
+                        <div class="media-body">
+                            <p>Luis Escobar <a href="#">@luis</a><br />
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis non massa ut ante interdum sagittis. Quisque eu sapien enim. 
+                            Phasellus sit amet viverra massa, sit amet rhoncus dui. Nam tortor justo, finibus ut gravida et, accumsan ac sapien. 
+                            Integer nec commodo libero. Nam auctor vestibulum congue. Donec convallis mollis lorem, eu mattis sem luctus in. 
+                            Curabitur tincidunt odio sit amet nulla fringilla, vel gravida orci aliquam. Donec viverra mollis tortor,
+                            a suscipit risus molestie at. Sed ut tincidunt metus. Maecenas nec dignissim velit, eget placerat lectus.
+                            </p>
+                        </div>
+                    </div> <!-- media -->
+                    <div class="media">
+                        <div class="media-left">
+                            <a href="#">
+                                <img class="media-object" src="//placehold.it/50x50" width="50" heigh="50" alt="{{ user.username }}">
+                            </a>
+                        </div>
+                        <div class="media-body">
+                            <p>Luis Escobar <a href="#">@luis</a><br />
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis non massa ut ante interdum sagittis. Quisque eu sapien enim. 
+                            Phasellus sit amet viverra massa, sit amet rhoncus dui. Nam tortor justo, finibus ut gravida et, accumsan ac sapien. 
+                            Integer nec commodo libero. Nam auctor vestibulum congue. Donec convallis mollis lorem, eu mattis sem luctus in. 
+                            Curabitur tincidunt odio sit amet nulla fringilla, vel gravida orci aliquam. Donec viverra mollis tortor, 
+                            a suscipit risus molestie at. Sed ut tincidunt metus. Maecenas nec dignissim velit, eget placerat lectus.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
