added user edit template

--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -62,6 +62,35 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-3">
+                    <h4>
+                        <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Friends <span class="badge">4</span>
+                    </h4>
+                    <div class="media">
+                        <div class="media-left">
+                            <a href="#">
+                                <img class="media-object" src="//placehold.it/50x50" width="50" heigh="50" alt="{{ user.username }}">
+                            </a>     
+                        </div>
+                        <div class="media-body">
+                            <p>Luis Escobar<br />
+                                <a href="#">@luis</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="media">
+                        <div class="media-left">
+                            <a href="#">
+                                <img class="media-object" src="//placehold.it/50x50" width="50" heigh="50" alt="{{ user.username }}">
+                            </a>     
+                        </div>
+                        <div class="media-body">
+                            <p>Luis Escobar<br />
+                                <a href="#">@luis</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
