--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block title %} Login {% endblock %}
 {% block content %}
+
+{% include "navbar.html" %}
     <div class="row">
         <div class="col-md-offset-3 col-md-6">
             <h3>User Login</h3>
@@ -20,4 +22,5 @@
             </form>
         </div>
     </div>
+    
 {% endblock %}
