--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
+
+{% from "user/_rel_button.html" import rel_button, rel_js %}
+
 {% block title %} {{ user.username }} - Profile {% endblock %}
+
 {% block header %}<link href="{{ url_for('static', filename='css/base.css') }}" rel="stylesheet" />{% endblock %}
 
 {% block content %}
@@ -14,50 +18,7 @@
             <div id="friends-toolbar" class="row">
                 <div class="btn-toolbar pull-right" role="toolbar" aria-label="friends-toolbar">
                     <div class="btn-group" role="group" aria-label="friends-toolbar-buttons">
-                        {% if edit_profile %}
-                            <a href="{{ url_for('.edit') }}" role="button" class="btn btn-default">
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                                Edit profile
-                            </a>
-                        {% else %}
-                            {% if rel == None %}
-                                <a href="{{ url_for('relationship_app.add_friend', to_username=user.username) }}" role="button" id="relationship-add-friend" class="btn btn-default">
-                                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Friend
-                                </a>  
-                                <a href="{{ url_for('relationship_app.block', to_username=user.username) }}" role="button" class="btn btn-default">
-                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Block
-                                </a>
-                            {% endif %}
-                            {if rel == "BLOCKED"}
-                                <a>
-                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                                    <span id="relationship-label">Blocked</span>
-                                </a>
-                            {% endif %}
-                            {% if rel == "FRIENDS_APPROVED" %}
-                                <a href="{{ url_for('relationship_app.remove_friend', to_username=user.username) }}" role="button" id="relationship-friends" class="btn btn-primary">
-                                    <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> 
-                                    <span id="relationship-label">Friends</span>
-                                </a>
-                            {% endif %}
-                            {% if rel == "FRIENDS_PENDING" %}
-                                <a href="{{ url_for('relationship_app.remove_friend', to_username=user.username) }}" role="button" id="relationship-friends-requested" class="btn btn-primary">
-                                    <span class="glyphicon glyphicon-user" aria-hidden="true"></span> 
-                                    <span id="relationship-label">Friendship Requested</span>
-                                </a>
-                            {% endif %}
-                            {% if rel == "REVERSE_FRIENDS_PENDING" %}
-                                <a href="{{ url_for('relationship_app.add_friend', to_username=user.username) }}" role="button" id="relationship-reverse-friends-requested" class="btn btn-primary">
-                                    <span class="glyphicon glyphicon-user" aria-hidden="true"></span> <span id="relationship-label">Accept Friendship</span>
-                                </a>
-                                <a href="{{ url_for('relationship_app.remove_friend', to_username=user.username) }}" role="button" id="relationship-reverse-friends-cancel" class="btn btn-default">
-                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> <span id="relationship-label">Deny Friendship</span>
-                                </a>            
-                            {% endif %}
-                            {% if rel == "REVERSE_BLOCKED" %}
-                                <a href="#" id="relationship-reverse-blocked"></a>
-                            {% endif %}
-                        {% endif %}
+                        {{ rel_button(rel, user) }}        
                     </div>
                 </div>
             </div>
@@ -130,10 +91,4 @@
             </div>
         </div>
     </div>
-{% endblock %}
-
-{% block end_body_js %}
-    <script type="text/javascript">
-        
-    </script>
 {% endblock %}
