--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -100,7 +100,24 @@
                             {% endfor %}
                         </div>
                     </div> <!-- col-md-12 -->
-                    
+                    <div class="profile-friends-pagination col-md-12 ">
+                        <div class="row">
+                            <div class="col-md-6 pull-left">
+                                {% if friends.has_prev %}
+                                    <a role="button" class="btn btn-primary" href="{{ url_for('.profile-friends-page', username=user.username, page=friends.prev_num) }}">
+                                        < Previous
+                                    </a>
+                                {% endif %}
+                            </div>
+                            <div class="col-md-6 pull right">
+                                {% if friends.has_next %}
+                                    <a class="btn btn-primary" href="{{ url_for('.profile-friends-page', username=user.username, page=friends.next_num) }}">
+                                        Next >
+                                    </a>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
                 {% endif %}
             </div>
         </div>
