--- a/static/css/base.css
+++ b/static/css/base.css
@@ -34,3 +34,15 @@
 .media-images {
     margin: 10px 0 7px;
 }
+
+.feed-comment {
+    margin-top: 15px;
+}
+
+.feed-message-comments {
+    margin-top: 10px;
+}
+
+.media-footer-likes {
+    margin-top: 5px;
+}
